# so-da-fastapi

./: pyproject.toml
app/: api.py
