[tool.poetry]
name = "so-da-fastapi"
version = "0.1.0"
description = ""
authors = ["Mikhail Postnikov <postnikovmu@mail.ru>"]
license = "GPL"
readme = "README.md"
packages = [{include = "so_da_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
